--- a/apps/demo/index.html
+++ b/apps/demo/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Internet Computer MetaMask Snap</title>
+    <title>IC Snap Demo</title>
 </head>
 <body>
-    <script type="module" src="./src/site_frontend/src/index.tsx"></script>
+    <script type="module" src="./src/index.tsx"></script>
 </body>
 </html>
