move demo backend & fixes

--- a/apps/site/index.html
+++ b/apps/site/index.html
@@ -6,6 +6,7 @@
     <title>Internet Computer MetaMask Snap</title>
 </head>
 <body>
-    <script type="module" src="./src/site_frontend/src/index.tsx"></script>
+    <script type="module" src="./src/frontend/index.tsx"></script>
+    <div id="root"></div>
 </body>
 </html>
