--- a/apps/demo/index.html
+++ b/apps/demo/index.html
@@ -6,6 +6,7 @@
     <title>IC Snap Demo</title>
 </head>
 <body>
-    <script type="module" src="./src/index.tsx"></script>
+    <script type="module" src="./src/frontend/index.tsx"></script>
+    <div id="root"></div>
 </body>
 </html>
