add eslint, add prettier

--- a/apps/site/index.html
+++ b/apps/site/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Internet Computer MetaMask Snap</title>
-</head>
-<body>
+  </head>
+  <body>
     <script type="module" src="./src/frontend/index.tsx"></script>
     <div id="root"></div>
-</body>
+  </body>
 </html>
