--- a/apps/site/index.html
+++ b/apps/site/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Internet Computer MetaMask Snap</title>
+    <link rel="stylesheet" href="./reset.css" />
   </head>
   <body>
     <script type="module" src="./src/frontend/index.tsx"></script>
