--- a/apps/site/index.html
+++ b/apps/site/index.html
@@ -3,8 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Internet Computer MetaMask Snap</title>
+    <title>
+      Masquerade - privacy-focused MetaMask wallet for the Internet Computer
+      (IC)
+    </title>
     <link rel="stylesheet" href="./reset.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900;9..40,1000&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <script type="module" src="./src/frontend/index.tsx"></script>
