add plushie world

--- a/apps/demo/index.html
+++ b/apps/demo/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IC Snap Demo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@500&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+  <body style="background-color: #faf2f9">
     <script type="module" src="./src/frontend/index.tsx"></script>
     <div id="root"></div>
   </body>
