--- a/apps/site/index.html
+++ b/apps/site/index.html
@@ -18,5 +18,6 @@
   <body>
     <script type="module" src="./src/frontend/index.tsx"></script>
     <div id="root"></div>
+    <div id="portal"></div>
   </body>
 </html>
