add OpenGraph tags, fix title

--- a/apps/site/index.html
+++ b/apps/site/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Masquerade - privacy-focused MetaMask wallet for the Internet Computer
-      (IC)
-    </title>
+
+    <title>MSQ - Safe ICP Wallet</title>
+
+    <meta property="og:title" content="MSQ - Safe ICP Wallet" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://msq.tech/og-image.svg" />
+    <meta property="og:url" content="https://msq.tech" />
+
     <link rel="stylesheet" href="/reset.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
