add assets via site, better opengraph

--- a/apps/site/index.html
+++ b/apps/site/index.html
@@ -5,11 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>MSQ - Safe ICP Wallet</title>
-
     <meta property="og:title" content="MSQ - Safe ICP Wallet" />
+
+    <meta
+      property="description"
+      content="MSQ is a MetaMask extension that makes your wallet work with the Internet Computer (ICP) blockchain"
+    />
+    <meta
+      property="og:description"
+      content="MSQ is a MetaMask extension that makes your wallet work with the Internet Computer (ICP) blockchain"
+    />
+
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://msq.tech/og-image.svg" />
     <meta property="og:url" content="https://msq.tech" />
+    <meta property="og:site_name" content="MSQ" />
+
+    <meta property="og:image" content="https://msq.tech/og-image.png" />
+    <meta property="og:image:alt" content="MSQ Crypto Wallet" />
+
+    <meta name="twitter:image" content="https://msq.tech/og-image.png" />
+    <meta name="twitter:image:alt" content="MSQ Crypto Wallet" />
+
+    <meta name="apple-mobile-web-app-title" content="MSQ - Safe ICP Wallet" />
+    <meta name="twitter:widgets:autoload" content="off" />
+    <meta name="twitter:dnt" content="off" />
+    <meta name="twitter:widgets:csp" content="on" />
+
+    <link rel="canonical" href="/" />
+    <link rel="icon" type="image/png" href="/icon.png" />
 
     <link rel="stylesheet" href="/reset.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
