add more landing sections, make it stretchy

--- a/apps/landing/index.html
+++ b/apps/landing/index.html
@@ -18,17 +18,17 @@
   <body>
     <section id="hero-screen">
       <header><img src="/img/msq-logo-landing.svg" alt="MSQ logo" /></header>
-      <h1>USE THE INTERNET COMPUTER WITH METAMASK</h1>
+      <h1>Use the Internet Computer with MetaMask</h1>
       <main>
         <div>
           <img
-            src="/img/hero-screen.svg"
+            src="/img/use-the-internet-computer-with-metamask.svg"
             alt="USE THE INTERNET COMPUTER WITH METAMASK"
           />
           <hgroup>
             <h2>
-              MSQ is a MetaMask extension that makes your wallet work with the
-              Internet Computer <span>(ICP)</span> blockchain.
+              MSQ is a MetaMask extension that enables your wallet to work with
+              the Internet Computer <span>(ICP)</span> blockchain.
             </h2>
 
             <a class="go-to-wallet-btn" href="https://msq.tech">
@@ -59,15 +59,90 @@
       <hgroup>
         <div>
           <h3>
-            All you need is your regular MetaMask wallet — MSQ will be installed
+            All you need is your regular MetaMask wallet — MSQ will install
             automatically.
           </h3>
-          <a class="install-mm-btn" href="https://metamask.io/download/">
+          <a
+            class="install-mm-btn"
+            target="_blank"
+            href="https://metamask.io/download/"
+          >
             <img src="/img/metamask.svg" alt="metamask icon" />
             <span>Install MetaMask</span>
           </a>
         </div>
       </hgroup>
+    </section>
+    <section id="feature-screen-1">
+      <div class="features-wrapper">
+        <hgroup class="privacy-feature">
+          <img src="/img/privacy.svg" alt="excellent privacy" />
+          <div>
+            <h3>Excellent Privacy</h3>
+            <p>
+              MSQ protects your identity, making it very hard to know who you
+              are, which web services you use, and how you spend your money.
+            </p>
+          </div>
+        </hgroup>
+        <hgroup class="simple-ui-feature">
+          <div>
+            <h3>Powerful yet Simple</h3>
+            <p>
+              Log into dapps, pay for digital goods and services, and manage
+              your assets, such as ICP, ckBTC, ckETH, or CHAT, with just a
+              couple of clicks.
+            </p>
+          </div>
+          <img src="/img/simple-ui.png" alt="powerful yet simple" />
+        </hgroup>
+      </div>
+    </section>
+    <section id="best-community-section">
+      <h2>Friendly Community</h2>
+      <div class="community-wrapper">
+        <img src="/img/friendly-community.svg" alt="Friendly Community" />
+        <span></span>
+        <hgroup>
+          <h6>
+            Experiencing issues with MSQ, found a bug, or just want to chat?
+            Join our Discord Community to connect with others like you!
+          </h6>
+          <a href="https://discord.gg/pySVmfrB5s" class="discord-btn">
+            <img src="/img/discord.svg" alt="discord icon" />
+            <span>Join Discord</span>
+          </a>
+        </hgroup>
+      </div>
+    </section>
+    <section id="feature-screen-2">
+      <div class="features-wrapper">
+        <hgroup class="frequent-updates-feature">
+          <img src="/img/frequent-updates.svg" alt="frequent updates" />
+          <div>
+            <h3>Continuously Evolving</h3>
+            <p>
+              We regularly update MSQ, adding new amazing features and fixing
+              anomalies. This ensures the wallet is always in top shape,
+              providing you with the most modern and secure user experience
+              possible.
+            </p>
+          </div>
+        </hgroup>
+        <hgroup class="crypto-is-for-sharing-feature">
+          <div>
+            <h3>Crypto is for Sharing</h3>
+            <p>
+              MSQ makes spending money easy. That's right! Instead of
+              emphasizing investments, dividends, and returns, we prioritize
+              simplifying your everyday activities. Buy goods, tip for services,
+              donate to charities, and gift coins to your loved ones - all with
+              just a couple of clicks!
+            </p>
+          </div>
+          <img src="/img/crypto-wallet.svg" alt="crypto wallet" />
+        </hgroup>
+      </div>
     </section>
   </body>
 </html>
