finish desktop version

--- a/apps/landing/index.html
+++ b/apps/landing/index.html
@@ -58,18 +58,21 @@
       </noindex>
       <hgroup>
         <div>
-          <h3>
-            All you need is your regular MetaMask wallet — MSQ will install
-            automatically.
-          </h3>
-          <a
-            class="install-mm-btn"
-            target="_blank"
-            href="https://metamask.io/download/"
-          >
-            <img src="/img/metamask.svg" alt="metamask icon" />
-            <span>Install MetaMask</span>
-          </a>
+          <span></span>
+          <div>
+            <h3>
+              All you need is your regular MetaMask wallet — MSQ will install
+              automatically.
+            </h3>
+            <a
+              class="install-mm-btn"
+              target="_blank"
+              href="https://metamask.io/download/"
+            >
+              <img src="/img/metamask.svg" alt="metamask icon" />
+              <span>Install MetaMask</span>
+            </a>
+          </div>
         </div>
       </hgroup>
     </section>
@@ -144,5 +147,50 @@
         </hgroup>
       </div>
     </section>
+    <section id="integration-screen">
+      <p>const identity: Identity = await</p>
+      <div>
+        <div>
+          <p>msq.requestLogin(</p>
+          <hgroup>
+            <div class="integration-block">
+              <h4>Building your own Project?</h4>
+              <p>
+                Enhance your dapp with instant authorization and simplified
+                ICRC-1 payments. Invite millions of MetaMask users in!
+              </p>
+              <a href="https://github.com/fort-major/masquerade">
+                <img src="/img/github.svg" alt="github icon" />
+                <span>Explore Documentation</span>
+              </a>
+            </div>
+            <p>);</p>
+          </hgroup>
+        </div>
+      </div>
+    </section>
+    <section id="lets-make-crypto-global">
+      <hgroup>
+        <h4>Let's Make Crypto Global Together</h4>
+        <div>
+          <a class="go-to-wallet-btn" href="https://msq.tech">
+            <span>Go to My Wallet</span>
+            <img src="/img/arrow-right-top.svg" alt="arrow icon" />
+          </a>
+          <a class="discord" href="https://discord.gg/pySVmfrB5s">
+            <img src="/img/discord.svg" alt="discord icon" />
+          </a>
+          <a class="github" href="https://github.com/fort-major/masquerade">
+            <img src="/img/github.svg" alt="github icon" />
+          </a>
+        </div>
+      </hgroup>
+    </section>
+    <footer>
+      <img
+        src="/img/powered-by-internet-computer.svg"
+        alt="Powered By Internet Computer"
+      />
+    </footer>
   </body>
 </html>
