--- a/apps/landing/index.html
+++ b/apps/landing/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <section id="hero-screen">
-      <header><img src="/img/msq-logo-landing.svg" alt="MSQ logo" /></header>
+      <header><img src="/img/msq-logo-landing.svg" alt="MSQ logo" /><img id="menu" src="/img/menu.svg" alt="ICP menu"/></header>
       <h1>Use the Internet Computer with MetaMask</h1>
       <main>
         <div>
@@ -26,24 +26,28 @@
             alt="USE THE INTERNET COMPUTER WITH METAMASK"
           />
           <hgroup>
+            <h1>Use the Internet Computer with MetaMask</h1>
             <h2>
               MSQ is a MetaMask extension that enables your wallet to work with
-              the Internet Computer <span>(ICP)</span> blockchain.
+              the&nbsp;Internet&nbsp;Computer <span>(ICP)</span> blockchain.
             </h2>
 
-            <a class="go-to-wallet-btn" href="https://msq.tech">
-              <span>Open MSQ App</span>
-              <img src="/img/arrow-right-top.svg" alt="arrow icon" />
-            </a>
-            <a class="discord" href="https://discord.gg/pySVmfrB5s">
-              <img src="/img/discord.svg" alt="discord icon" />
-            </a>
-            <a class="github" href="https://github.com/fort-major/masquerade">
-              <img src="/img/github.svg" alt="github icon" />
-            </a>
+            <div class="buttons">
+                <a class="go-to-wallet-btn" href="https://msq.tech">
+                <span>Open MSQ App</span>
+                <img src="/img/arrow-right-top.svg" alt="arrow icon" />
+                </a>
+                <a class="discord" href="https://discord.gg/pySVmfrB5s">
+                <img src="/img/discord.svg" alt="discord icon" />
+                </a>
+                <a class="github" href="https://github.com/fort-major/masquerade">
+                <img src="/img/github.svg" alt="github icon" />
+                </a>
+            </div>
           </hgroup>
         </div>
       </main>
+      <div class="pad"></div>
     </section>
     <section id="no-install-screen">
       <noindex class="running-text">
@@ -57,11 +61,12 @@
         <span>no installation required /&nbsp;</span>
       </noindex>
       <hgroup>
+        <h2>No installation required</h2>
         <div>
           <span></span>
           <div>
             <h3>
-              All you need is your regular MetaMask wallet — MSQ will install
+              All you need is your regular MetaMask wallet — MSQ will be installed
               automatically.
             </h3>
             <a
@@ -89,41 +94,45 @@
           </div>
         </hgroup>
         <hgroup class="simple-ui-feature">
+          <img class="img-sm" src="/img/simple-ui-sm.png" alt="powerful yet simple" />
           <div>
-            <h3>Powerful yet Simple</h3>
+            <h3>Powerful&nbsp;yet&nbsp;Simple</h3>
             <p>
               Log into dapps, pay for digital goods and services, and manage
-              your assets, such as ICP, ckBTC, ckETH, or CHAT, with just a
-              couple of clicks.
+              your assets, such as ICP, ckBTC, ckETH, or CHAT, easier than ever.
             </p>
           </div>
-          <img src="/img/simple-ui.png" alt="powerful yet simple" />
+          <img class="img-lg" src="/img/simple-ui.png" alt="powerful yet simple" />
         </hgroup>
       </div>
     </section>
     <section id="best-community-section">
-      <h2>Friendly Community</h2>
-      <div class="community-wrapper">
-        <img src="/img/friendly-community.svg" alt="Friendly Community" />
-        <span></span>
-        <hgroup>
-          <h6>
-            Experiencing issues with MSQ, found a bug, or just want to chat?
-            Join our Discord Community to connect with others like you!
-          </h6>
-          <a href="https://discord.gg/pySVmfrB5s" class="discord-btn">
-            <img src="/img/discord.svg" alt="discord icon" />
-            <span>Join Discord</span>
-          </a>
-        </hgroup>
-      </div>
+        <div>
+            <img class="img-sm" src="/img/friendly-community-sm.svg" alt="Friendly Community" />
+            <h2>Friendly <br/> Community</h2>
+            <div class="community-wrapper">
+                <img class="img-lg" src="/img/friendly-community.svg" alt="Friendly Community" />
+                <span></span>
+                <hgroup>
+                <h6>
+                    Experiencing issues with MSQ, found a bug, or just want to chat?
+                    Join our Discord Community to connect with others like you!
+                </h6>
+                <a href="https://discord.gg/pySVmfrB5s" class="discord-btn">
+                    <img src="/img/discord.svg" alt="discord icon" />
+                    <span>Join Discord</span>
+                </a>
+                </hgroup>
+            </div>
+        </div>
     </section>
     <section id="feature-screen-2">
       <div class="features-wrapper">
         <hgroup class="frequent-updates-feature">
-          <img src="/img/frequent-updates.svg" alt="frequent updates" />
+          <img class="img-lg" src="/img/frequent-updates.svg" alt="Frequent updates" />
+          <img class="img-sm" src="/img/frequent-updates-sm.svg" alt="Frequent updates" />
           <div>
-            <h3>Continuously Evolving</h3>
+            <h3>Always Evolving</h3>
             <p>
               We regularly update MSQ, adding new amazing features and fixing
               anomalies. This ensures the wallet is always in top shape,
@@ -133,41 +142,69 @@
           </div>
         </hgroup>
         <hgroup class="crypto-is-for-sharing-feature">
-          <div>
-            <h3>Crypto is for Sharing</h3>
-            <p>
-              MSQ makes spending money easy. That's right! Instead of
-              emphasizing investments, dividends, and returns, we prioritize
-              simplifying your everyday activities. Buy goods, tip for services,
-              donate to charities, and gift coins to your loved ones - all with
-              just a couple of clicks!
-            </p>
-          </div>
-          <img src="/img/crypto-wallet.svg" alt="crypto wallet" />
+            <div class="wallet-back">
+                <img src="/img/crypto-wallet-sm.svg" alt="crypto wallet">
+                <span class="empty"></span>
+                <div class="wallet-front">
+                    <div class="wallet-front-top">
+                        <div class="left"></div>
+                        <img src="/img/wallet-front-cut.svg"/>
+                        <div class="right"></div>
+                    </div>
+                    <div class="wallet-front-bottom">
+                        <h3>Crypto is for Sharing</h3>
+                        <p>
+                          MSQ makes spending money easy. That's right! Instead of
+                          emphasizing investments, dividends, and returns, we prioritize
+                          simplifying your everyday activities. Buy goods, tip for services,
+                          donate to charities, and gift coins to your loved ones - all with
+                          just a couple of clicks!
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <h3>Crypto is for Sharing</h3>
+                <p>
+                MSQ makes spending money easy. That's right! Instead of
+                emphasizing investments, dividends, and returns, we prioritize
+                simplifying your everyday activities. Buy goods, tip for services,
+                donate to charities, and gift coins to your loved ones - all with
+                just a couple of clicks!
+                </p>
+            </div>
+            <img src="/img/crypto-wallet.svg" alt="crypto wallet" />
         </hgroup>
       </div>
     </section>
     <section id="integration-screen">
-      <p>const identity: Identity = await</p>
-      <div>
         <div>
-          <p>msq.requestLogin(</p>
-          <hgroup>
-            <div class="integration-block">
-              <h4>Building your own Project?</h4>
-              <p>
-                Enhance your dapp with instant authorization and simplified
-                ICRC-1 payments. Invite millions of MetaMask users in!
-              </p>
-              <a href="https://github.com/fort-major/masquerade">
-                <img src="/img/github.svg" alt="github icon" />
-                <span>Explore Documentation</span>
-              </a>
+            <span>
+                <p>const identity: Identity</p>
+                <p>= await msq.requestLogin();</p> 
+                <p>await identity.sign(data);</p>
+            </span>
+            <p>const identity: Identity = await</p>
+            <div>
+                <div>
+                    <p>msq.requestLogin(</p>
+                    <hgroup>
+                        <div class="integration-block">
+                            <h4>Building your own Project?</h4>
+                            <p>
+                                Enhance your dapp with instant authorization and simplified
+                                ICRC-1 payments. Invite millions of MetaMask users in!
+                            </p>
+                            <a href="https://github.com/fort-major/masquerade">
+                                <img src="/img/github.svg" alt="github icon" />
+                                <span>Explore Documentation</span>
+                            </a>
+                        </div>
+                        <p>);</p>
+                    </hgroup>
+                </div>
             </div>
-            <p>);</p>
-          </hgroup>
-        </div>
-      </div>
+            </div>
     </section>
     <section id="lets-make-crypto-global">
       <hgroup>
