fix feature block

--- a/apps/landing/index.html
+++ b/apps/landing/index.html
@@ -145,7 +145,7 @@
         <hgroup class="simple-ui-feature">
           <img class="img-sm" src="/img/simple-ui-sm.png" alt="powerful yet simple" />
           <div>
-            <h3>Powerful&nbsp;yet&nbsp;Simple</h3>
+            <h3>Powerful yet Simple</h3>
             <p>
               Log into dapps, pay for digital goods and services, and manage
               your assets, such as ICP, ckBTC, ckETH, or CHAT, easier than ever.
