--- a/apps/landing/index.html
+++ b/apps/landing/index.html
@@ -86,7 +86,7 @@
                     <span>Open MSQ App</span>
                     <img src="/img/arrow-right-top.svg" alt="arrow icon" />
                 </a>
-                    <a class="discord" href="https://discord.gg/N7kUfMfvA8">
+                    <a class="discord" href="https://discord.gg/RMxyF5Huhs">
                     <img src="/img/discord.svg" alt="discord icon" />
                 </a>
                     <a class="github" href="https://github.com/fort-major/masquerade">
@@ -167,7 +167,7 @@
                     Experiencing issues with MSQ, found a bug, or just want to chat?
                     Join our Discord Community to connect with others like you!
                 </h6>
-                <a href="https://discord.gg/N7kUfMfvA8" class="discord-btn">
+                <a href="https://discord.gg/RMxyF5Huhs" class="discord-btn">
                     <img src="/img/discord.svg" alt="discord icon" />
                     <span>Join Discord</span>
                 </a>
@@ -263,7 +263,7 @@
             <span>Go to My Wallet</span>
             <img src="/img/arrow-right-top.svg" alt="arrow icon" />
           </a>
-          <a class="discord" href="https://discord.gg/N7kUfMfvA8">
+          <a class="discord" href="https://discord.gg/RMxyF5Huhs">
             <img src="/img/discord.svg" alt="discord icon" />
           </a>
           <a class="github" href="https://github.com/fort-major/masquerade">
@@ -291,7 +291,7 @@
                     <a href="#best-community-section" onclick="closeNav()"><li>Community</li></a>
                     <a href="#integration-screen" onclick="closeNav()"><li>For Devs</li></a>
                 </ul>
-                <a href="https://discord.gg/N7kUfMfvA8" target="_blank">
+                <a href="https://discord.gg/RMxyF5Huhs" target="_blank">
                     <span>Contact Us</span>
                     <img src="/img/arrow-right-top.svg" alt="arrow icon" />
                 </a>
