rename it to msq, publish new modules

--- a/apps/landing/index.html
+++ b/apps/landing/index.html
@@ -89,7 +89,7 @@
                     <a class="discord" href="https://discord.gg/RMxyF5Huhs">
                     <img src="/img/discord.svg" alt="discord icon" />
                 </a>
-                    <a class="github" href="https://github.com/fort-major/masquerade">
+                    <a class="github" href="https://github.com/fort-major/msq">
                     <img src="/img/github.svg" alt="github icon" />
                 </a>
             </div>
@@ -244,7 +244,7 @@
                                 Enhance your dapp with instant authorization and simplified
                                 ICRC-1 payments. Invite millions of MetaMask users in!
                             </p>
-                            <a href="https://github.com/fort-major/masquerade">
+                            <a href="https://github.com/fort-major/msq">
                                 <img src="/img/github.svg" alt="github icon" />
                                 <span>Explore Documentation</span>
                             </a>
@@ -266,7 +266,7 @@
           <a class="discord" href="https://discord.gg/RMxyF5Huhs">
             <img src="/img/discord.svg" alt="discord icon" />
           </a>
-          <a class="github" href="https://github.com/fort-major/masquerade">
+          <a class="github" href="https://github.com/fort-major/msq">
             <img src="/img/github.svg" alt="github icon" />
           </a>
         </div>
